# UnifiedModelBenchmark

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.old  CmakeLists.txt  README.md  README.old.md  bath_test.sh  paddlelite_benchmark.sh  test_paddlelite_benchmark.sh
docs/: args.md  gdb.md  gflags.md  guide.md  ncnn.md  onnxruntime.md  opencv.md  paddlelite.md  解决linux adb无法找到devices.md
docs/builder/: README.md  mnn.md  编译ncnn依赖.md  编译onnxruntime依赖.md  编译paddlelite依赖.md
include/mutils/: args.hpp  init.hpp  log.hpp  profile.hpp  profiler.hpp  tensor.hpp  timer.hpp
include/ncnn/: platform.h
include/onnxruntime/core/common/: eigen_common_wrapper.h
include/onnxruntime/core/eager/: ort_kernel_invoker.h
include/onnxruntime/core/framework/: allocator.h  data_types.h  data_types_internal.h  execution_provider.h  float16.h  float8.h  kernel_def_builder.h  kernel_registry.h  op_kernel.h  op_kernel_info.h  to_tensor_proto_element_type.h
include/onnxruntime/core/graph/: constants.h
include/onnxruntime/core/platform/: Barrier.h  EigenNonBlockingThreadPool.h  ort_mutex.h
include/onnxruntime/core/providers/: providers.h
include/onnxruntime/core/providers/acl/: acl_provider_factory.h
include/onnxruntime/core/providers/cann/: cann_provider_options.h
include/onnxruntime/core/providers/coreml/: coreml_provider_factory.h
include/onnxruntime/core/providers/cuda/: cuda_provider_options.h
include/onnxruntime/core/providers/dml/: dml_provider_factory.h
include/onnxruntime/core/providers/tensorrt/: tensorrt_provider_options.h
include/onnxruntime/core/session/: onnxruntime_c_api.h  onnxruntime_cxx_api.h  onnxruntime_float16.h  onnxruntime_lite_custom_op.h
include/opencv/opencv2/: cvconfig.h
include/paddlelite/: paddle_use_kernels.h  paddle_use_ops.h
models/ncnn_resnet50-opset16/: model.param
scripts/: android_test.sh  download_models.py  linux_build_bash.sh  linux_build_opencv.sh  linux_build_ort.sh  onnx_simple.py
src/: debug.cpp  ncnn_android.cpp  ncnn_benchmark.cpp  onnxruntime_android.cpp  onnxruntime_benchmark.cpp  paddlelite_android.cpp
src/benchmark/: mnn_benchmark.cpp  ncnn_benchmark.cpp  onnxruntime_benchmark.cpp  paddlelite_android.cpp
src/mutils/: init.cpp  profiler.cpp
tools/: env.sh  merge_ort.mri  ncnn_benchmark.sh  ncnn_cmn.sh  ncnn_fusenet.sh  ncnn_resnet50.sh  onnxruntime_benchmark.sh  onnxruntime_ms2d.sh  onnxruntime_resnet50.sh  paddlelite_benchmark.sh  read_info.py  t.py  test.py  test_paddlelite_benchmark.sh
tools/opt/: onnx_simple.py
tools/test/: mnn_resenet50-npu.sh  mnn_resenet50.sh  ncnn_resnet50.sh  onnxruntime_resnet50.sh
